[tool.poetry]
name = "fastapiredis"
version = "0.1.0"
description = ""
authors = ["moh <moh.anwer1988@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
py-redis = "^1.1.1"
pydantic = "^2.0.3"
pydantic-settings = "^2.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_mode = "auto"